force-app/main/default/objects/Account/fields/Clearbit_Ultimate_Parent_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Ultimate_Parent_Domain__c</fullName>
    <description>The domain of the company&apos;s ultimate parent company (if any).</description>
    <inlineHelpText>The domain of the company&apos;s ultimate parent company (if any).</inlineHelpText>
    <label>Clearbit Ultimate Parent Domain</label>
    <type>Url</type>
</CustomField>