force-app/main/default/objects/Account/fields/Clearbit_US_EIN__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_US_EIN__c</fullName>
    <description>The company&apos;s US Employer Identification Number (EIN).</description>
    <inlineHelpText>The company&apos;s US Employer Identification Number (EIN).</inlineHelpText>
    <label>Clearbit US EIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>