force-app/main/default/objects/Account/fields/CloudingoAgent__BRDI__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BRDI__c</fullName>
    <label>Billing Residential Delivery Indicator</label>
    <length>12</length>
    <type>Text</type>
</CustomField>