force-app/main/default/objects/Account/fields/CloudingoAgent__BTZ__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BTZ__c</fullName>
    <label>Billing Timezone</label>
    <length>48</length>
    <type>Text</type>
</CustomField>