force-app/main/default/objects/Account/fields/CloudingoAgent__SRDI__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SRDI__c</fullName>
    <label>Shipping Residential Delivery Indicator</label>
    <length>12</length>
    <type>Text</type>
</CustomField>