force-app/main/default/objects/Account/fields/CloudingoAgent__STZ__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__STZ__c</fullName>
    <label>Shipping Timezone</label>
    <length>48</length>
    <type>Text</type>
</CustomField>