force-app/main/default/objects/Account/fields/Commerce_Type__c.field-meta.xml
<CustomField>
    <fullName>Commerce_Type__c</fullName>
    <description>Accounts with at least one placed order event are first classified as ecommerce. Of the remaining, if the website URL is bad or is for a &apos;coming soon&apos; store, these
are tagged as Website Unavailable. ~30% that remain are run through mechanical turk thrice to classify as Ecom or not. Accounts classified similarly at least 2 out of 3 times by Mturk are given that classification. Blanks are new accounts that have not been run through Mturk yet.</description>
    <inlineHelpText>Accounts with at least one placed order event = ecommerce. Of remaining, if website URL is bad or is for a &apos;coming soon&apos; store, these are tagged as Website Unavailable. ~30% that remain are run through mechanical turk thrice  to classify as Ecom or not.</inlineHelpText>
    <label>Commerce Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Non E-Commerce</fullName>
            </value>
            <value>
                <fullName>Website Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>