force-app/main/default/objects/Account/fields/Competitor_with_Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Competitor_with_Current_Contract__c</fullName>
    <label>Competitor with Current Contract</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Platform</valueSetName>
    </valueSet>
</CustomField>