force-app/main/default/objects/Account/fields/Compiled_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Compiled_Sales_Revenue__c</fullName>
    <description>Changed from the below on 12/5/2018, using annualized Placed Order Value can inflate or deflate a customers revenue based on seasonality:
IF(
PRODUCT_Revenue_Trailing_12_Months__c&gt;(PRODUCT_Metrics_PlacedOrder_Value__c*12),
PRODUCT_Revenue_Trailing_12_Months__c,

IF(PRODUCT_Revenue_Trailing_12_Months__c&lt;(PRODUCT_Metrics_PlacedOrder_Value__c*12),
(PRODUCT_Metrics_PlacedOrder_Value__c*12),

IF(
AND(
etailinsights_Estimated_Sales__c&lt;&gt;0,
PRODUCT_Revenue_Trailing_12_Months__c=0,
PRODUCT_Metrics_PlacedOrder_Value__c=0),
etailinsights_Estimated_Sales__c,0)))</description>
    <formula>IF(
Klaviyo_Product_Usage__r.PRODUCT_Revenue_Trailing_12_Months__c&gt;0,
Klaviyo_Product_Usage__r.PRODUCT_Revenue_Trailing_12_Months__c,

IF(
AND(
etailinsights_Estimated_Sales__c&lt;&gt;0,
Klaviyo_Product_Usage__r.PRODUCT_Revenue_Trailing_12_Months__c=0,
Klaviyo_Product_Usage__r.PRODUCT_Metrics_PlacedOrder_Value__c=0),
etailinsights_Estimated_Sales__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compiled Sales Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>