force-app/main/default/objects/Account/fields/Compliance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if associated Opportunity has a cancellation reason with &apos;Compliance &amp; Deliverability&apos;
Associated with TP ticket: 80662</description>
    <inlineHelpText>Flags if associated Opportunity has a cancellation reason with &apos;Compliance &amp; Deliverability&apos;</inlineHelpText>
    <label>Compliance Flag</label>
    <type>Checkbox</type>
</CustomField>