force-app/main/default/objects/Account/fields/Confirmed_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Reference_Date__c</fullName>
    <description>Set by PB. Date the Customer Reference Disposition was updated to != null</description>
    <inlineHelpText>Date the Customer Reference Disposition was confirmed.</inlineHelpText>
    <label>Confirmed Reference Date</label>
    <type>Date</type>
</CustomField>