force-app/main/default/objects/Account/fields/Confirmed_Reference_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Reference_Disposition__c</fullName>
    <description>Used to track referenceable customers. Set to &quot;Willing&quot; by automation when CSAT response is received and KPU.Onboarding_CSAT_Reference_Decision_Maker__c =TRUE or KPU.Onboarding_CSAT_Reference_Primary_User__c = TRUE. Set manually to Willing or Not Willing if customer is confirmed to consent or disagree to providing a reference. Blank field indicates not confirmed.</description>
    <inlineHelpText>Set this field when reference disposition is confirmed. Willing = customer agreed to provide reference; Not Willing = customer declined to provide reference; Blank = unconfirmed</inlineHelpText>
    <label>Confirmed Reference Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Willing to be Referenced</fullName>
            </value>
            <value>
                <fullName>Not Willing to be Referenced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>