force-app/main/default/objects/Account/fields/Confirmed_Reference_Source__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Reference_Source__c</fullName>
    <description>For tracking.  How the Confirmed Reference Disposition came to be collected.  Either via the &quot;Onboarding CSAT Survey&quot; in Klaviyo, the &quot;Growth Reference Confirmation Request Survey&quot; in Gainsight, or from Marketing or Sales.  This field is loaded via Gainsight automation as confirmed reference dispositions are collected from CSAT and Growth surveys.  If this field is null, but a Confirmed Reference Disposition is populated, then it was populated manually.</description>
    <inlineHelpText>How the Confirmed Reference Disposition came to be collected.  Set by automation to &quot;Onboarding CSAT Survey&quot; or &quot;Growth Reference Confirmation Survey&quot; if responses were collected by either of those 2 mediums.  If Confirmed Reference Disposition is populated but this field is blank, assume Disposition was input manually Sales, CS, or Marketing.</inlineHelpText>
    <label>Confirmed Reference Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>