force-app/main/default/objects/Account/fields/Connect_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Connect_Company_ID__c</fullName>
    <description>Used for deleting existing Connect Company Profiles</description>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Company ID</label>
    <type>Text</type>
</CustomField>