force-app/main/default/objects/Account/fields/Contact_for_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC-3103</description>
    <inlineHelpText>The customer contact who can be reached out to for a reference</inlineHelpText>
    <label>Contact for Reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact for Reference)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>