force-app/main/default/objects/Account/fields/Contact_that_agreed_to_TOS__c.field-meta.xml
<CustomField>
    <fullName>Contact_that_agreed_to_TOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact that agreed to TOS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>