force-app/main/default/objects/Account/fields/Content_Consent_Release_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Content_Consent_Release_Date_Signed__c</fullName>
    <label>Content Consent &amp; Release Date Signed</label>
    <type>Date</type>
</CustomField>