force-app/main/default/objects/Account/fields/Contracted_Email_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Email_Competitor__c</fullName>
    <description>SFDC 1290
Required if Email Competitor Contract Exp Date is Populated</description>
    <inlineHelpText>Required if Email Competitor Contract Exp Date is Populated</inlineHelpText>
    <label>Contracted Email Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>