force-app/main/default/objects/Account/fields/Contracted_SMS_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Contracted_SMS_Competitor__c</fullName>
    <description>SFDC 1290
Required if SMS Competitor Contract End Date is populated</description>
    <inlineHelpText>Required if SMS Competitor Contract End Date is populated</inlineHelpText>
    <label>Contracted SMS Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>