force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country Indicated by Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Aland Islands</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>