force-app/main/default/objects/Account/fields/Course_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Completion_Date__c</fullName>
    <description>Date of course completion</description>
    <inlineHelpText>Date of course completion</inlineHelpText>
    <label>Course Completion Date</label>
    <type>DateTime</type>
</CustomField>