force-app/main/default/objects/Account/fields/Created_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_Day__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Created Day</label>
    <type>Date</type>
</CustomField>