force-app/main/default/objects/Account/fields/Credited_Agency_AOS__c.field-meta.xml
<CustomField>
    <fullName>Credited_Agency_AOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credited Partner AOS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>