force-app/main/default/objects/Account/fields/Credited_MRR__c.field-meta.xml
<CustomField>
    <fullName>Credited_MRR__c</fullName>
    <description>Credited MRR across all Partner Splits for this account. Includes Promotional Increases.</description>
    <inlineHelpText>Credited MRR across all Partner Splits for this account. Includes Promotional Increases.</inlineHelpText>
    <label>Credited MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>