force-app/main/default/objects/Account/fields/Crossbeam_Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Crossbeam_Partner_Account_Name__c</fullName>
    <label>Crossbeam Partner Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>