force-app/main/default/objects/Account/fields/CS_Transfer_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Transfer_Notes__c</fullName>
    <description>SFDC 4306</description>
    <label>CS Transfer Notes</label>
    <type>TextArea</type>
</CustomField>