force-app/main/default/objects/Account/fields/CS_Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Transfer_Reason__c</fullName>
    <label>CS Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently Managed by Partner</fullName>
            </value>
            <value>
                <fullName>Customer Requested New CSM</fullName>
            </value>
            <value>
                <fullName>Capacity Constraints</fullName>
            </value>
            <value>
                <fullName>High Growth Account</fullName>
            </value>
            <value>
                <fullName>Incorrect Geo or Timezone</fullName>
            </value>
            <value>
                <fullName>No Longer Managed by Partner</fullName>
            </value>
            <value>
                <fullName>CSM Is Inactive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Agency to Mid Market - MRR</fullName>
                <isActive>false</isActive>
                <label>Agency to Mid Market - MRR</label>
            </value>
            <value>
                <fullName>Agency to Mid Touch - MRR</fullName>
                <isActive>false</isActive>
                <label>Agency to Mid Touch - MRR</label>
            </value>
            <value>
                <fullName>Agency to SMB - Red Health</fullName>
                <isActive>false</isActive>
                <label>Agency to SMB - Red Health</label>
            </value>
            <value>
                <fullName>CSM Attrition,</fullName>
                <isActive>false</isActive>
                <label>CSM Attrition</label>
            </value>
            <value>
                <fullName>CSM to Growth - MRR,</fullName>
                <isActive>false</isActive>
                <label>CSM to Growth - MRR</label>
            </value>
            <value>
                <fullName>CSM to Growth - Unresponsive,,</fullName>
                <isActive>false</isActive>
                <label>CSM to Growth - Unresponsive</label>
            </value>
            <value>
                <fullName>Geographic Location,</fullName>
                <isActive>false</isActive>
                <label>Geographic Location</label>
            </value>
            <value>
                <fullName>Growth to Agency - Partner MRR Threshold,</fullName>
                <isActive>false</isActive>
                <label>Growth to Agency - Partner MRR Threshold</label>
            </value>
            <value>
                <fullName>Growth to CSM - MRR,</fullName>
                <isActive>false</isActive>
                <label>Growth to CSM - MRR</label>
            </value>
            <value>
                <fullName>Growth to Mid Market - MRR</fullName>
                <isActive>false</isActive>
                <label>Growth to Mid Market - MRR</label>
            </value>
            <value>
                <fullName>Growth to Mid Touch - MRR</fullName>
                <isActive>false</isActive>
                <label>Growth to Mid Touch - MRR</label>
            </value>
            <value>
                <fullName>Growth to SMB - Red Health</fullName>
                <isActive>false</isActive>
                <label>Growth to SMB - Red Health</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>