force-app/main/default/objects/Account/fields/CSM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CSM_Manager__c</fullName>
    <formula>IF(
NOT(ISBLANK( SUPPORT_Account_Manager__c )),
SUPPORT_Account_Manager__r.Manager.FirstName &amp; &quot; &quot; &amp;  SUPPORT_Account_Manager__r.Manager.LastName,
&quot;&quot;
)</formula>
    <label>CSM Manager</label>
    <type>Text</type>
</CustomField>