force-app/main/default/objects/Account/fields/CSM_Transfer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CSM_Transfer_Approval_Status__c</fullName>
    <description>SFDC 4306</description>
    <inlineHelpText>Indicates if an account has been approved to transfer CSMs</inlineHelpText>
    <label>CSM Transfer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>