force-app/main/default/objects/Account/fields/Current_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Expiration_Date__c</fullName>
    <description>The date in which an Accounts contract with an email provider expires</description>
    <inlineHelpText>The date in which an Accounts contract with an email provider expires</inlineHelpText>
    <label>Email Competitor Contract Exp. Date</label>
    <type>Date</type>
</CustomField>