force-app/main/default/objects/Account/fields/Current_Email_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_Email_Platform__c</fullName>
    <label>Current Email Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Platform</valueSetName>
    </valueSet>
</CustomField>