force-app/main/default/objects/Account/fields/Current_GMV_Segment__c.field-meta.xml
<CustomField>
    <fullName>Current_GMV_Segment__c</fullName>
    <label>(x) Current GMV Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>