force-app/main/default/objects/Account/fields/Current_Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Families__c</fullName>
    <label>Current Product Families</label>
    <length>255</length>
    <type>Text</type>
</CustomField>