force-app/main/default/objects/Account/fields/Current_Product_Families_OLD__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Families_OLD__c</fullName>
    <description>Shows the current active product families an Account has purchased</description>
    <inlineHelpText>Shows the current active product families an Account has purchased</inlineHelpText>
    <label>Current Product Families OLD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>