force-app/main/default/objects/Account/fields/Current_Products_OLD__c.field-meta.xml
<CustomField>
    <fullName>Current_Products_OLD__c</fullName>
    <description>Shows the current active products an Account has purchased</description>
    <inlineHelpText>Shows the current active products an Account has purchased</inlineHelpText>
    <label>Current Products OLD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Klaviyo One</fullName>
            </value>
            <value>
                <fullName>Klaviyo Email</fullName>
            </value>
            <value>
                <fullName>Klaviyo SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>