force-app/main/default/objects/Account/fields/Custom_Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Contract_Effective_Date__c</fullName>
    <inlineHelpText>Field managed by Finance to identify customers with a custom contract and the term effective date</inlineHelpText>
    <label>Custom Contract Effective Date</label>
    <type>Date</type>
</CustomField>