force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Mid Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>false</isActive>
                <label>Enterprise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>