force-app/main/default/objects/Account/fields/Customer_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Score__c</fullName>
    <description>SFDC-4852. Currently synced from Gainsight health scorecards. Reflects the aggregate health score from BI/Data Science&apos;s health score model.</description>
    <inlineHelpText>Reflects the aggregate health score from BI/Data Science&apos;s customer health score model.  Synced weekly from Gainsight.</inlineHelpText>
    <label>Customer Health Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>