force-app/main/default/objects/Account/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <description>SFDC-2907.  Currently synced from Gainsight health scorecards.  Measures the CSM&apos;s perception of the customer&apos;s sentiment towards Klaviyo.</description>
    <inlineHelpText>Measures the CSM&apos;s perception of the customer&apos;s sentiment towards Klaviyo.  Synced to SFDC from Gainsight health scorecards.</inlineHelpText>
    <label>Customer Sentiment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>