force-app/main/default/objects/Account/fields/Customer_Success_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager_ID__c</fullName>
    <description>Used during PWR Phase 1 backfills</description>
    <formula>SUPPORT_Account_Manager__r.Id</formula>
    <label>Customer Success Manager ID</label>
    <type>Text</type>
</CustomField>