force-app/main/default/objects/Account/fields/Customer_Success_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager_Name__c</fullName>
    <description>This is formula field to stamp the Customer Success Manager First name and Last name</description>
    <formula>SUPPORT_Account_Manager__r.FirstName + &quot; &quot; +SUPPORT_Account_Manager__r.LastName</formula>
    <inlineHelpText>This is formula field to stamp the Customer Success Manager First name and Last name</inlineHelpText>
    <label>Customer Success Manager Name</label>
    <type>Text</type>
</CustomField>