force-app/main/default/objects/Account/fields/D_B_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>D_B_Annual_Revenue__c</fullName>
    <label>D&amp;B Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>