force-app/main/default/objects/Account/fields/D_B_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>D_B_Billing_City__c</fullName>
    <label>D&amp;B Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>