force-app/main/default/objects/Account/fields/D_B_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>D_B_Billing_State__c</fullName>
    <label>D&amp;B Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>