force-app/main/default/objects/Account/fields/D_B_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>D_B_Billing_Street__c</fullName>
    <label>D&amp;B Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>