force-app/main/default/objects/Account/fields/D_B_Business_Trust_Index__c.field-meta.xml
<CustomField>
    <fullName>D_B_Business_Trust_Index__c</fullName>
    <label>D&amp;B Business Trust Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>