force-app/main/default/objects/Account/fields/D_B_Domestic_Ultimate_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_Domestic_Ultimate_DUNS_Number__c</fullName>
    <label>D&amp;B Domestic Ultimate DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>