force-app/main/default/objects/Account/fields/D_B_Domestic_Ultimate_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>D_B_Domestic_Ultimate_Postal_Code__c</fullName>
    <description>SFDC-7335</description>
    <label>D&amp;B Domestic Ultimate Postal Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>