force-app/main/default/objects/Account/fields/D_B_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>D_B_Fiscal_Year_End__c</fullName>
    <label>D&amp;B Fiscal Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>