force-app/main/default/objects/Account/fields/D_B_Fortune_1000__c.field-meta.xml
<CustomField>
    <fullName>D_B_Fortune_1000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B Fortune 1000</label>
    <type>Checkbox</type>
</CustomField>