force-app/main/default/objects/Account/fields/D_B_Global_Ultimate_Annual_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>D_B_Global_Ultimate_Annual_Sales_Revenue__c</fullName>
    <label>D&amp;B Global Ultimate Annual Sales Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>