force-app/main/default/objects/Account/fields/D_B_Global_Ultimate_Busine__c.field-meta.xml
<CustomField>
    <fullName>D_B_Global_Ultimate_Busine__c</fullName>
    <description>SFDC-7335</description>
    <label>D&amp;B Global Ultimate Postal Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>