force-app/main/default/objects/Account/fields/D_B_Global_Ultimate_State__c.field-meta.xml
<CustomField>
    <fullName>D_B_Global_Ultimate_State__c</fullName>
    <description>Created in SFDC-7335</description>
    <label>D&amp;B Global Ultimate State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>