force-app/main/default/objects/Account/fields/D_B_Global_Ultimate_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>D_B_Global_Ultimate_Street_Address__c</fullName>
    <description>SFDC-7335</description>
    <label>D&amp;B Global Ultimate Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>