force-app/main/default/objects/Account/fields/D_B_Headquarter_DUNS__c.field-meta.xml
<CustomField>
    <fullName>D_B_Headquarter_DUNS__c</fullName>
    <label>D&amp;B Headquarter DUNS #</label>
    <length>9</length>
    <type>Text</type>
</CustomField>