force-app/main/default/objects/Account/fields/D_B_HQ_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>D_B_HQ_Mailing_City__c</fullName>
    <label>D&amp;B HQ / Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>